[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/Unifont点阵黑13.0.01.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://script/SceneMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 52
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 22
font_data = ExtResource( 2 )

[node name="SceneMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
margin_right = 256.0
margin_bottom = 768.0

[node name="previous" type="Button" parent="Panel"]
margin_left = 24.0
margin_top = 480.0
margin_right = 232.0
margin_bottom = 523.0
custom_fonts/font = SubResource( 2 )
text = "上一关"
icon_align = 1

[node name="next" type="Button" parent="Panel"]
margin_left = 24.0
margin_top = 544.0
margin_right = 232.0
margin_bottom = 587.0
custom_fonts/font = SubResource( 2 )
text = "下一关"
icon_align = 1

[node name="reset" type="Button" parent="Panel"]
margin_left = 24.0
margin_top = 608.0
margin_right = 232.0
margin_bottom = 651.0
custom_fonts/font = SubResource( 2 )
text = "重置本关"
icon_align = 1

[node name="back" type="Button" parent="Panel"]
margin_left = 24.0
margin_top = 672.0
margin_right = 232.0
margin_bottom = 715.0
custom_fonts/font = SubResource( 2 )
text = "返回主菜单"
icon_align = 1

[node name="Label" type="Label" parent="Panel"]
margin_left = 48.0
margin_top = 56.0
margin_right = 204.0
margin_bottom = 165.0
custom_fonts/font = SubResource( 3 )
text = "Godot
Boxman"
align = 1

[node name="Label2" type="Label" parent="Panel"]
margin_left = 16.0
margin_top = 192.0
margin_right = 248.0
margin_bottom = 216.0
custom_fonts/font = SubResource( 4 )
align = 1

[connection signal="pressed" from="Panel/previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="Panel/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Panel/reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="Panel/back" to="." method="_on_back_pressed"]
